<resources>
    <string name="app_name">Trabalho</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_list">List Activity</string>
    <string name="title_activity_list_view_loader">"Tela List View Loader "</string>
    <string name="title_activity_lista_pessoa">Lista de Pessoas</string>
    <string name="action_list_pessoa">Pessoas</string>
    <string name="title_activity_form_pessoa">Pessoa</string>
    <string name="label_nome">Nome:</string>
    <string name="label_endereco">Endereço:</string>
    <string name="label_email">E-mail:</string>
    <string name="label_sexo">Sexo:</string>
    <string name="label_radio_masculino">masculino</string>
    <string name="label_radio_feminino">feminino</string>
    <string name="label_id">ID:</string>
    <string name="action_new_pessoa">Nova Pessoa</string>
    <string name="action_accept_pessoa">Salvar</string>
    <string name="action_accept_encontro">Salvar</string>
    <string name="welcome">Bem vindo</string>
    <string name="title_activity_ver_pessoa">VerPessoa</string>
    <string name="action_edit_pessoa">Editar</string>
    <string name="label_idade">Idade</string>
    <string name="label_matricula">Matricula</string>
    <string name="action_excluir_pessoa">Excluir</string>
    <string name="title_activity_form_evento">Evento</string>
    <string name="title_activity_lista_evento">Lista de eventos</string>
    <string name="title_activity_ver_evento">VerEvento</string>
    <string name="label_data_inicio">Data Inicio</string>
    <string name="label_data_fim">Data fim</string>
    <string name="action_list_evento">Eventos</string>
    <string name="action_list_relatorio">Relatorios</string>
    <string name="selecione">Selecione</string>
    <string name="change_date">Change the date</string>
    <string name="action_new_evento">Novo Evento</string>
    <string name="action_edit_evento">Editar Evento</string>
    <string name="spinner_title">Evento</string>
    <string name="title_activity_spinner">spinner</string>
    <string name="title_activity_lista_pessoa_evento">ListaPessoaEvento</string>
    <string name="title_activity_lista_evento_encontro">ListaEventoEncontro</string>
    <string name="action_list_encontro">Lista Encontros</string>
    <string name="title_activity_form_encontro">Encontros</string>
    <string name="action_form_encontro">Encontros</string>
    <string name="label_evento">Evento</string>
    <string name="label_descricao">Descricao</string>
    <string name="label_data">Data</string>
    <string name="label_hora">Hora</string>
    <string name="title_activity_lista_pessoa_encontro">ListaPessoaEncontro</string>
    <string name="action_new_encontro">Encontro</string>
    <string name="title_activity_ver_encontro">ver_encontro</string>

    <string name="capture_name">QR Code Capture</string>
    <string name="encoder_name">QR Code Encoder</string>
    <string name="decoder_name">QR Code Decoder</string>

    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>

    <string name="msg_default_contents">Contents</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>

    <string name="result_address_book">Found contact info</string>
    <string name="result_calendar">Found calendar event</string>
    <string name="result_email_address">Found email address</string>
    <string name="result_geo">Found geographic coordinates</string>
    <string name="result_isbn">Found book</string>
    <string name="result_product">Found product</string>
    <string name="result_sms">Found SMS address</string>
    <string name="result_tel">Found phone number</string>
    <string name="result_text">Found plain text</string>
    <string name="result_uri">Found URL</string>
    <string name="result_wifi">Found WLAN Configuration</string>

    <string name="wifi_changing_network">Changing Network</string>
    <string name="wifi_ssid_label">Network Name</string>
    <string name="wifi_type_label">Type</string>

    <string name="barcode_image">Barcode Image</string>
    <string name="title_activity_encoder">EncoderActivity</string>
</resources>
