
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.unisc.pdm.trabalhodispositivos.FormPessoa">
    <TextView
        android:text="@string/label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:enabled="false"
        android:id="@+id/edit_id_evento" />

    <TextView
        android:text="@string/label_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/edit_nome_evento" />

    <TextView
        android:text="@string/label_data_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/dateDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>
    <Button android:id="@+id/pickDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_date"/>

    <TextView
        android:text="@string/label_data_fim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/dateDisplay_fim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>

    <Button android:id="@+id/pickDate_fim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_date"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Adicionar Pessoa"
        android:onClick="AdicionarPessoa"
        android:id="@+id/btn_addPessoa" />

</LinearLayout>

